--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -80,7 +80,7 @@
     width: 50px;
     height: 4px;
     left: 0;
-    top: 100%;
+    top: 16px;
     background: colors.$color_hover;
     border-radius: 2px;
     margin-top: 29px;
